Fix step3 section margin on mobile

--- a/css/home.scss
+++ b/css/home.scss
@@ -910,7 +910,7 @@ p {
         margin-bottom: 26px;
 
         @include small {
-            padding-top: 12px;
+            padding-top: 40px;
             margin-bottom: 20px;
             text-align: center;
         }
